# Shark-Core

./: .gitignore  Cargo.toml  LICENSE  README.md  history.txt  memory_freq.csv
.github/workflows/: ci.yml
crates/backends/: Cargo.toml
crates/backends/src/: lib.rs  simple.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: lib.rs
crates/core/src/: lib.rs  traits.rs  types.rs
crates/indicators/: Cargo.toml
crates/indicators/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/predict/: Cargo.toml  README.md
crates/predict/data/: knowledge.csv  knowledge_rust.csv  knowledge_science.csv  problems.csv  unknowns.csv
crates/predict/data/knowledge/: knowledge_alphabet.csv  knowledge_analysis.csv  knowledge_calculus.csv  knowledge_geometry.csv  knowledge_local.csv  knowledge_logic.csv  knowledge_math.csv  knowledge_relations.csv  knowledge_rust.csv  knowledge_science.csv  knowledge_symbols.csv
crates/predict/src/: context.rs  core.rs  decode.rs  grammar.rs  integrator.rs  knowledge_env.rs  lib.rs  linear.rs  loader.rs  memory.rs  memory_freq.rs  model.rs  reasoner.rs  reasoning.rs  scientist.rs  self_repair.rs  semantic_question_understanding.rs  simple_model.rs  tokenizer.rs  train.rs
crates/reason/: Cargo.toml
crates/reason/src/: lib.rs
crates/sampler/: Cargo.toml
crates/server/: Cargo.toml
crates/tokenize/: Cargo.toml
crates/ui/: Cargo.toml
docs/: AI_SCIENTIST_REPORT.md  bench_e11_1.csv  code_tree.md  knowledge_log.md  problems_report.md  reasoning_log.md  verification_process.md
scripts/: checks.sh
(+8 files in other folders)
